Fixes to the shift cover page, much easier on the eyes now :)

--- a/sidekick/static/styles/shifts.css
+++ b/sidekick/static/styles/shifts.css
@@ -4,7 +4,6 @@
 {
     border-radius: 4px;
     border: lightgray 2px solid;    
-    background-color: white;
     transition: all linear 0.2s;
 }
 .open-shift
@@ -73,4 +72,10 @@
 }
 .hidden {
     display: none;
+}
+.bg-l-cyan {
+    background-color: rgb(150, 189, 199);
+}
+.bg-open {
+    background-color: rgb(231, 202, 75);
 }
